src/k8s/apps/twenty/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twenty
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    app.kubernetes.io/name: twenty
