src/k8s/apps/twenty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twenty
spec:
  selector:
    app.kubernetes.io/name: twenty-server
  ports:
    - name: http
      port: 3000
      targetPort: http
