src/k8s/apps/twenty/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: twenty-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twenty
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    traefik.ingress.kubernetes.io/router.middlewares: twenty-twenty-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - crm.sgf.dev
      secretName: twenty-tls
  rules:
    - host: crm.sgf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twenty
                port:
                  name: http
